--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,6 +30,10 @@ menu:
       name: Search
       url: /search/
       weight: 30
+    - identifier: about
+      name: About
+      url: /about/
+      weight: 40
 
 caches:
   images:
