--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://tomohung.github.io/
+baseURL: https://blog.tomohung.com/
 hasCJKLanguage: true
 languageCode: zh-TW
 title: Tomo 3.0
